--- a/spark/pom.xml
+++ b/spark/pom.xml
@@ -42,8 +42,8 @@
         <spark.version>2.4.5</spark.version>
         <protobuf.version>2.5.0</protobuf.version>
         <py4j.version>0.10.7</py4j.version>
-        <spark.scala.version>2.11.12</spark.scala.version>
-        <spark.scala.binary.version>2.11</spark.scala.binary.version>
+        <spark.scala.version>2.12.15</spark.scala.version>
+        <spark.scala.binary.version>2.12</spark.scala.binary.version>
 
         <spark.archive>spark-${spark.version}</spark.archive>
         <spark.src.download.url>
@@ -142,7 +142,7 @@
         <profile>
             <id>spark-scala-2.12</id>
             <properties>
-                <spark.scala.version>2.12.7</spark.scala.version>
+                <spark.scala.version>2.12.15</spark.scala.version>
                 <spark.scala.binary.version>2.12</spark.scala.binary.version>
             </properties>
         </profile>
@@ -172,6 +172,14 @@
             <id>spark-3.0</id>
             <properties>
                 <spark.version>3.1.1</spark.version>
+                <protobuf.version>2.5.0</protobuf.version>
+                <py4j.version>0.10.9</py4j.version>
+            </properties>
+        </profile>
+        <profile>
+            <id>spark-3.1</id>
+            <properties>
+                <spark.version>3.1.2</spark.version>
                 <protobuf.version>2.5.0</protobuf.version>
                 <py4j.version>0.10.9</py4j.version>
             </properties>
