--- a/zeppelin-display/pom.xml
+++ b/zeppelin-display/pom.xml
@@ -59,10 +59,20 @@
         <version>${scala.version}</version>
         <scope>provided</scope>
       </dependency>
-    </dependencies>
+ 
+
+
+   </dependencies>
   </dependencyManagement>
 
   <dependencies>
+<dependency>
+  <groupId>org.scala-lang.modules</groupId>
+  <artifactId>scala-xml_2.12</artifactId>
+  <version>1.3.0</version>
+</dependency>
+
+
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>zeppelin-interpreter</artifactId>
@@ -90,13 +100,14 @@
   </dependencies>
 
   <profiles>
+
     <profile>
-      <id>scala-2.11</id>
+      <id>scala-2.12</id>
       <dependencies>
         <dependency>
           <groupId>org.scala-lang.modules</groupId>
           <artifactId>scala-xml_${scala.binary.version}</artifactId>
-          <version>1.1.0</version>
+          <version>1.3.0</version>
           <scope>provided</scope>
         </dependency>
       </dependencies>
