--- a/zeppelin-interpreter/pom.xml
+++ b/zeppelin-interpreter/pom.xml
@@ -41,6 +41,7 @@
     <sisu.plexus.version>0.3.4</sisu.plexus.version>
     <jline.version>2.14.3</jline.version>
     <atomix.version>3.0.0-rc4</atomix.version>
+    <atomixx.version>3.1.10</atomixx.version>
 
     <!--plugin versions-->
     <plugin.shade.version>2.3</plugin.shade.version>
